--- a/src/main/resources/layouts/main_view.fxml
+++ b/src/main/resources/layouts/main_view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <StackPane prefWidth="231.0" xmlns:fx="http://javafx.com/fxml"
-           fx:controller="in.httprequest.gradle_test.MainViewController">
+           fx:controller="in.httprequest.gradle_test.ui.MainViewController">
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
